# triangle

./: Cargo.toml  README.md  game.webm
client/: Cargo.toml
client/src/: main.rs  texture.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
