[package]
name = "server"
version = "0.1.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
asnet = { git = "https://github.com/htrefil/asnet" }
bincode = "1.2.1"
structopt = "0.3.7"
slab = "0.4.2"
